@@ -1,4 +1,26 @@
+/*
+ * Copyright (C) 2013, 2014 Brett Wooldridge
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ * http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+*/
+
 package com.zaxxer.hikari.pool;
+
+import static com.zaxxer.hikari.pool.TestElf.newHikariConfig;
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertSame;
+import static org.junit.Assert.assertTrue;
+import static org.junit.Assert.fail;
 
 import java.io.ByteArrayOutputStream;
 import java.io.PrintWriter;
@@ -7,7 +29,6 @@ import java.util.Set;
 
 import javax.sql.DataSource;
 
-import org.junit.Assert;
 import org.junit.Test;
 
 import com.zaxxer.hikari.HikariConfig;
@@ -23,8 +44,8 @@ public class TestPropertySetter
       HikariConfig config = new HikariConfig(propfile1);
       config.validate();
 
-      Assert.assertEquals(5, config.getMinimumIdle());
-      Assert.assertEquals("SELECT 1", config.getConnectionTestQuery());
+      assertEquals(5, config.getMinimumIdle());
+      assertEquals("SELECT 1", config.getConnectionTestQuery());
    }
 
    @Test
@@ -36,23 +57,23 @@ public class TestPropertySetter
       config.validate();
 
       Class<?> clazz = this.getClass().getClassLoader().loadClass(config.getDataSourceClassName());
-      DataSource dataSource = (DataSource) clazz.newInstance();
+      DataSource dataSource = (DataSource) clazz.getDeclaredConstructor().newInstance();
       PropertyElf.setTargetFromProperties(dataSource, config.getDataSourceProperties());
    }
 
    @Test
    public void testObjectProperty() throws Exception
    {
-      HikariConfig config = new HikariConfig();
+      HikariConfig config = newHikariConfig();
       config.setDataSourceClassName("com.zaxxer.hikari.mocks.StubDataSource");
       PrintWriter writer = new PrintWriter(new ByteArrayOutputStream());
       config.addDataSourceProperty("logWriter", writer);
 
       Class<?> clazz = this.getClass().getClassLoader().loadClass(config.getDataSourceClassName());
-      DataSource dataSource = (DataSource) clazz.newInstance();
+      DataSource dataSource = (DataSource) clazz.getDeclaredConstructor().newInstance();
       PropertyElf.setTargetFromProperties(dataSource, config.getDataSourceProperties());
 
-      Assert.assertSame(PrintWriter.class, dataSource.getLogWriter().getClass());
+      assertSame(PrintWriter.class, dataSource.getLogWriter().getClass());
    }
 
    @Test
@@ -64,7 +85,7 @@ public class TestPropertySetter
       config.validate();
 
       Class<?> clazz = this.getClass().getClassLoader().loadClass(config.getDataSourceClassName());
-      DataSource dataSource = (DataSource) clazz.newInstance();
+      DataSource dataSource = (DataSource) clazz.getDeclaredConstructor().newInstance();
       PropertyElf.setTargetFromProperties(dataSource, config.getDataSourceProperties());
    }
 
@@ -72,7 +93,7 @@ public class TestPropertySetter
    public void testGetPropertyNames() throws Exception
    {
       Set<String> propertyNames = PropertyElf.getPropertyNames(HikariConfig.class);
-      Assert.assertTrue(propertyNames.contains("dataSourceClassName"));
+      assertTrue(propertyNames.contains("dataSourceClassName"));
    }
 
    @Test
@@ -82,9 +103,10 @@ public class TestPropertySetter
          Properties props = new Properties();
          props.put("what", "happened");
          PropertyElf.setTargetFromProperties(new HikariConfig(), props);
-         Assert.fail();
+         fail();
       }
       catch (RuntimeException e) {
+         // fall-thru
       }
    }
 }
